k8s-config/sprintresources/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: resources
  namespace: apps
  labels:
    app: resources
spec:
  selector:
    app: resources
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resources
  namespace: apps
  labels:
    app: resources
spec:
  replicas: 6
  selector:
    matchLabels:
      app: resources
  template:
    metadata:
      labels:
        app: resources
    spec:
      serviceAccountName: resources
      containers:
      - name: resources
        image: robinverstraelen/containerworkshop-resources:latest
        ports:
        - containerPort: 80
