k8s-config/sprintresources/virtual-service-resource.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: resources
  namespace: apps
spec:
  awsName: resources.apps.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: resources
